update base route

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "",
+  "homepage": "http://snahwang.github.io/mbticocktail",
   "name": "cocktails",
   "version": "0.1.0",
   "private": true,
