--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,8 @@ on:
         paths:
             - "**"
 
+run-name: Run with ${{ github.sha }} commit by ${{ github.actor }}
+
 
 jobs:
     deploy:
