--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,9 @@ jobs:
           - name: Print github.event
             run: cat $GITHUB_EVENT_PATH
           - name: Print github.event
-            run: echo ${{ github.event.pull_request.head.sha }}
+            run: |
+                echo ${{ github.event.pull_request.head.sha }}
+                echo ${{ github.event.pull_request.title }}
           - name : first
             run : |
                   echo "first"
