--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ on:
             - "**"
 
 run-name: Run with ${{ github.sha }} commit by ${{ github.actor }}
-
+ 
 
 jobs:
     deploy:
@@ -20,6 +20,10 @@ jobs:
         steps:
           - name: Print github.event
             run: cat $GITHUB_EVENT_PATH
+          - name: Print github.event
+            run: |
+                echo ${{ github.event.pull_request.head.sha }}
+                echo ${{ github.event.pull_request.title }}
           - name : first
             run : |
                   echo "first"
