--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
         paths:
             - "**"
 
-run-name: Run with ${{ github.sha }} commit by ${{ github.actor }}
+run-name: [PROD] ${{ github.event.head_commit.message }}
  
 
 jobs:
